--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href=" tech.html" class="navbar_links">Tech</a>
               </li>
               <li class="navbar_item">
-                <a href="/" class="navbar_links">Tech</a>
+                <a href="/" class="navbar_links">Product</a>
               </li>
               <li class="navbar_btn">
                 <a href="/" class="button">Sign Up</a>
@@ -31,6 +31,6 @@
         </ul>
     </div>
     
-    </nav>
+ </nav>
 </body>
 </html>
