--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>NEXT</title>
 </head> 
 <body>
     <nav class="navbar">
@@ -32,5 +32,7 @@
     </div>
     
  </nav>
+ <script src="app.js"></script>
+
 </body>
 </html>
