--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="tech.html" class="navbar_links">Tech</a>
               </li>
               <li class="navbar_item">
-                <a href="/" class="navbar_links">Product</a>
+                <a href="products.html" class="navbar_links">Product</a>
               </li>
               <li class="navbar_btn">
                 <a href="/" class="button">Sign Up</a>
